Added more figures

--- a/MotionPlanningHigherDimensions.ipynb
+++ b/MotionPlanningHigherDimensions.ipynb
@@ -278,9 +278,11 @@
     "\n",
     "************\n",
     "\n",
+    "<a name=\"fig:PRM\"></a>\n",
+    "\n",
     "![fig:PRM](figures/planning/prm.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:PRM\">Figure 1</a>.\n",
+    "<div class=\"figcaption\"><b>Figure 1</b>.\n",
     "Illustrating the main steps of the PRM algorithm.\n",
     "</div>\n",
     "\n",
@@ -394,10 +396,11 @@
     "queries.)\n",
     "\n",
     "***************\n",
+    "<a name=\"fig:IncrementalPRM\"></a>\n",
     "\n",
     "![fig:IncrementalPRM](figures/planning/incremental_prm.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:IncrementalPRM\">Figure 2</a>. An incremental version of PRM adds more samples to the roadmap while maintaining the roadmap's connected components. It terminates once the\n",
+    "<div class=\"figcaption\"><b>Figure 2</b>. An incremental version of PRM adds more samples to the roadmap while maintaining the roadmap's connected components. It terminates once the\n",
     "start and goal are in the same component.</div>\n",
     "\n",
     "***************\n",
@@ -479,9 +482,17 @@
     "\n",
     "***************\n",
     "\n",
-    "![fig:PRMPerformance](figures/planning/prm_performance.png)\n",
+    "<a name=\"fig:PRMPerformance\"></a>\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:PRMPerformance\">Figure 3</a>. TODO: Show empirical PRM performance.</div>\n",
+    "| (a) PRM, w=0.01 | (b) PRM, w=0.005 | (c) PRM, w=0.0025 |\n",
+    "|------------------------------------------------------------------|-----------------------------------------------------------|------------------------------------------------------------------|\n",
+    "| ![fig:PRMPerformance_a](figures/planning/prm_0.01_histogram.png) | ![fig:PRMPerformance_b](figures/planning/prm_0.005_histogram.png) | ![fig:PRMPerformance_c](figures/planning/prm_0.0025_histogram.png) |\n",
+    "\n",
+    "<div class=\"figcaption\"><b>Figure 3</b>.\n",
+    " Histograms of PRM failure rate as more time is spent planning, taken over 100 runs on\n",
+    " the same narrow passage problem. As the narrow passage width w shrinks, the likelihood of failure for a\n",
+    " given time duration increases.\n",
+    "</div>\n",
     "\n",
     "***************\n",
     "\n",
@@ -526,9 +537,11 @@
     "\n",
     "***************\n",
     "\n",
+    "<a name=\"fig:Visibility\"></a>\n",
+    "\n",
     "![fig:Visibility](figures/planning/visibility.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:Visibility\">Figure 4</a>. Some visibility sets of various points and spaces.  A PRM will require more samples to connect to points with small visibility sets.  Moreover, $\\epsilon$-goodness is determined by the point in the free space with the smallest visibility set.  A convex space is $(\\epsilon=1)$-good, while spaces with cusps and features of lower dimension are not $\\epsilon$-good for any $\\epsilon > 0$. </div>\n",
+    "<div class=\"figcaption\"><b>Figure 4</b>. Some visibility sets of various points and spaces.  A PRM will require more samples to connect to points with small visibility sets.  Moreover, $\\epsilon$-goodness is determined by the point in the free space with the smallest visibility set.  A convex space is $(\\epsilon=1)$-good, while spaces with cusps and features of lower dimension are not $\\epsilon$-good for any $\\epsilon > 0$. </div>\n",
     "\n",
     "***************\n",
     "\n",
@@ -550,9 +563,11 @@
     "\n",
     "***************\n",
     "\n",
+    "<a name=\"fig:Expansiveness\"></a>\n",
+    "\n",
     "![fig:Expansiveness](figures/planning/expansiveness.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:Expansiveness\">Figure 5</a>. (a) Even if a space is $\\epsilon$-good, a PRM may have a difficult time connecting two regions.  (b) A $\\beta$-lookout of a set $X$ is the subset of $X$ that can see a $\\beta$ fraction of its complement.  (c)  A narrow passage causes certain $\\beta$-lookouts to have small volume, reducing the expansiveness of the space.  (d) A convex set is maximally expansive ($\\beta=1$). </div>\n",
+    "<div class=\"figcaption\"><b>Figure 5</b>. (a) Even if a space is $\\epsilon$-good, a PRM may have a difficult time connecting two regions.  (b) A $\\beta$-lookout of a set $X$ is the subset of $X$ that can see a $\\beta$ fraction of its complement.  (c)  A narrow passage causes certain $\\beta$-lookouts to have small volume, reducing the expansiveness of the space.  (d) A convex set is maximally expansive ($\\beta=1$). </div>\n",
     "\n",
     "***************\n",
     "\n",
@@ -673,10 +688,11 @@
     "refining.  \n",
     "\n",
     "*******************\n",
+    "<a name=\"fig:RRTBugtrap\"></a>\n",
     "\n",
     "![fig:RRTBugtrap](figures/planning/bugtrap.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:RRTBugtrap\">Figure 6</a>\n",
+    "<div class=\"figcaption\"><b>Figure 6</b>\n",
     "To escape the mouth of a bugtrap, an RRT needs to sample a very\n",
     "carefully chosen sequence of milestones within the general area that it\n",
     "has already explored. But due to the Voronoi bias, it frequently\n",
@@ -859,7 +875,19 @@
     "#### PRM\\* and RRT\\*\n",
     "PRM has been shown to be asymptotically-optimal using the $R$-neighborhood connection strategy, but not the $k$-nearest neighbors strategy.  Using the $R$ neighborhood strategy, however, in the limit of large $n$ eventually tries to connect $O(n^2)$ milestones.  It has been proven that using a *dynamically choice* of $R$ and $k$ can lead to an asymptotically optimal PRM planner, specifically the values of $R^\\star(n) \\propto (\\frac{\\log n}{n})^{1/d}$ and $k^\\star(n) \\propto \\log n$.  Note that $R^\\star$ shrinks towards zero and $k^\\star$ grows, so that in both cases, each new milestone is expected to be connected to $O(\\log n)$ milestones, which grows asymptotically.  Hence, the number of edges in the roadmap is expected to be $O(n \\log n)$.  (Note that there is a constant factor in these expressions that depends on the volume of free space and distance measure, and must be set sufficiently large or else asymptotic optimality no longer holds.)\n",
     "\n",
-    "TODO: add figures on PRM and the shrinking radius / growing k.\n",
+    "*************\n",
+    "<a name=\"fig:PRMStar\"></a>\n",
+    "\n",
+    "| (a) PRM, $k=5$ neighbors | (b) PRM, $R=0.1$ connections | (c) PRM\\* | (d) RRT\\* |\n",
+    "|---------------------------------------------------------------|--------------------------------------------------------|---------------------------------------------------------------|--------------------------------------------------------|\n",
+    "|![fig:PRMStar_a](figures/planning/prm_knn.gif) | ![fig:PRMStar_b](figures/planning/prm_neighborhood.gif) | ![fig:PRMStar_c](figures/planning/prmstar.gif) | ![fig:PRMStar_d](figures/planning/rrtstar.gif) |\n",
+    "\n",
+    "<div class=\"figcaption\"><b>Figure 7</b>. \n",
+    "    Convergence of various PRM and RRT variants.  The fixed-$k$ strategy is not asymptotically optimal.\n",
+    "    </div>\n",
+    "\n",
+    "*************\n",
+    "\n",
     "\n",
     "RRT has been shown not to be asymptotically-optimal in any case, since the history-dependence of its tree growth strategy from the nearest configuration in the tree prevents it from taking advantage of shorter paths that may arise. The RRT\\* algorithm introduces a new technique called \"rewiring\" that, upon expanding the tree, changes the tree structure if it is possible to improve path lengths by passing through a different nearby milestone.  Let us assume a unidirectional RRT.  The main differences introduced to RRT are:\n",
     "\n",
@@ -905,15 +933,15 @@
    "metadata": {},
    "source": [
     "#### Convergence rate\n",
-    "Due to their proven asymptotic optimality and relative ease of implementation, PRM\\* and RRT\\* have gained wide acceptance, and have spawned many variants.  However, we should ask how quickly does the path converge to optimal?\n",
+    "Due to their proven asymptotic optimality and relative ease of implementation, PRM\\* and RRT\\* have gained wide acceptance, and have spawned many variants. But how quickly do these planners converge to optimal?\n",
     "\n",
     "First of all, PRM\\* and RRT\\* run slower than their normal counterparts to find the first feasible path, because they do more work per iteration.  One way of mitigating this in RRT\\* is to disable the rewiring step until a first feasible path is found, in which case the algorithm begins identically to RRT.\n",
     "\n",
-    "Secondly, PRM\\* and RRT\\* perform $N$ configuration feasibility checks and $O(n \\log n)$ edge visibility checks.  The number of configuration checks is the same as in PRM and RRT, but PRM performs $kn$ edge checks and RRT performs $n$. So for the same number of samples, we pay a logarithmic price for asymptotic optimality.\n",
+    "Secondly, PRM\\* and RRT\\* perform $n$ configuration feasibility checks and $O(n \\log n)$ edge visibility checks.  The number of configuration checks is the same as in PRM and RRT, but PRM performs $kn$ edge checks and RRT performs $n$. So we pay a logarithmic factor of computation speed to gain asymptotic optimality.\n",
     "\n",
     "Third, the number of milestones needed to obtain a desired decrease in the suboptimality of the best path is exponential in the dimensionality.  Examine two cases: either a) the planner does not yet have a path in the homotopy class of the optimal path, and hence must explore the space further globally to make progress, and b) the planner has a path fairly close to the optimal path and can just perform local sampling to improve the current best path.  In case a), it can be shown that for any planner that only performs binary collision queries, the expected number of samples needed to obtain a solution in the optimal homotopy class is $\\Omega(\\delta^{-d})$ (that is, at least a constant times $\\delta^{-d}$) where $\\delta$ is the clearance of a path in the optimal homotopy class.  The counterexample is shown below: the optimal path passes through the tiny block, and its visibility set volume is $O(\\delta^{d})$, and at least two samples need to be placed there.\n",
     "\n",
-    "Now, we can also show that for a sampling based planner to locally reduce the cost of the current best path, it must place samples in a region with volume $O((c(n)-c^\\star)^{d-1})$.  \n",
+    "To address case b), we can also show that for a sampling based planner to locally reduce the cost of the current best path, it must place samples in a region with volume $O((c(n)-c^\\star)^{d-1})$.  \n",
     "\n",
     "TODO: expand on this and show figures"
    ]
@@ -927,14 +955,16 @@
     "As noted above, PRM and RRT are only concerned with finding a feasible\n",
     "path, and often produce jerky, unnatural paths. Shortcutting is a very\n",
     "useful postprocessing heuristic, illustrated in\n",
-    "[Figure 7](#fig:Shortcutting), in which portions of a path are\n",
-    "repeatedly replaced with shorter, feasible segments.\n",
+    "[Figure 9](#fig:Shortcutting), in which portions of a path are\n",
+    "repeatedly replaced with shorter, feasible segments.  \n",
     "\n",
     "*************\n",
     "\n",
+    "<a name=\"fig:Shortcutting\"></a>\n",
+    "\n",
     "![fig:Shortcutting](figures/planning/shortcutting.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:Shortcutting\">Figure 7.</a>\n",
+    "<div class=\"figcaption\"><b>Figure 9.</b>\n",
     "   A shortcutting heuristic can quickly smooth out the jerkiest parts of\n",
     "paths that are generated by a sampling-based planner.\n",
     "    </div>\n",
@@ -983,21 +1013,23 @@
     "5. Return Visible-Recurse$(a,m,\\epsilon)$ $\\wedge$  Visible-Recurse$(m,b,\\epsilon)$.\n",
     "\n",
     "********************\n",
-    "This approach is illustrated in [Figure 8.a](#fig:dynamic-cc).\n",
+    "This approach is illustrated in [Figure 10.a](#fig:dynamic-cc).\n",
     "\n",
     "*************\n",
+    "\n",
+    "<a name=\"fig:dynamic-cc\"></a>\n",
     "\n",
     "| (a) Approximate dynamic CC with recursion | (b) Exact dynamic CC with adaptive recursion |\n",
     "| ------------------------------------------|----------------------------------------------|\n",
     "| ![fig:dynamic-cc](figures/planning/dynamic_cc.png) | ![fig:dynamic-cc-adaptive](figures/planning/dynamic_cc_adaptive.png) |\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:dynamic-cc\">Figure 8.</a>\n",
+    "<div class=\"figcaption\"><b>Figure 10.</b>\n",
     "   Approximate and exact dynamic collision checking methods.\n",
     "    </div>\n",
     "    \n",
     "*************\n",
     "\n",
-    "Although this approximate technique is by far the most widely used in practice, _exact_ dynamic collision checking methods are also available.  These methods are based on similar recursions, but use additional information about the clearance of a configuration.  Recall that the clearance $c(q)$ of a configuration is the distance in C-space to the nearest C-obstacle.  If we can show that $d(a,b) \\leq c(a)+c(b)$, then we can be certain that $\\overline{ab}$ is collision free ([Figure 8.b](#fig:dynamic-cc)).  This is because the balls centered at $a$ and $b$ with radii $c(a)$ and $c(b)$, overlap, are in free space, and contain $\\overline{ab}$ in their union.  (In most cases, however, we do not have access to an exact clearance function, but this reasoning still works when $c(q)$ is any lower bound on clearance.)  This gives the following exact algorithm:\n",
+    "Although this approximate technique is by far the most widely used in practice, _exact_ dynamic collision checking methods are also available.  These methods are based on similar recursions, but use additional information about the clearance of a configuration.  Recall that the clearance $c(q)$ of a configuration is the distance in C-space to the nearest C-obstacle.  If we can show that $d(a,b) \\leq c(a)+c(b)$, then we can be certain that $\\overline{ab}$ is collision free ([Figure 10.b](#fig:dynamic-cc)).  This is because the balls centered at $a$ and $b$ with radii $c(a)$ and $c(b)$, overlap, are in free space, and contain $\\overline{ab}$ in their union.  (In most cases, however, we do not have access to an exact clearance function, but this reasoning still works when $c(q)$ is any lower bound on clearance.)  This gives the following exact algorithm:\n",
     "\n",
     "********************\n",
     "<a name=\"alg:Visible-Exact1\"></a>\n",
@@ -1060,7 +1092,19 @@
     "\n",
     "A *$k$-d tree* data structure is a spatial hierarchy that recursively divides a Cartesian space $\\mathbb{R}^k$ into regions by splitting each region by a hyperplane.  *The $k$ here refers to the number of dimensions in the space, not the $k$ in the kNN query.  In the following, let us revert back to our original notation where dimensionality is denoted $d$.*  Each hyperplane is aligned to one of the $d$ primary axes.  An illustration of a k-d tree is shown below.\n",
     "\n",
-    "TODO: k-d tree illustration.\n",
+    "***************\n",
+    "\n",
+    "<a name=\"fig:KDTrees\"></a>\n",
+    "\n",
+    "(a) k-d tree holding 14 2-D points | (b) First leaf reached in NN query | (c) Second leaf reached in NN query \n",
+    "-----------------------------------|------------------------------------|------------------------------------\n",
+    "![fig:KDTrees_a](figures/planning/kdtree.svg) | ![fig:KDTrees_b](figures/planning/kdtree_query1.svg) | ![fig:KDTrees_c](figures/planning/kdtree_query2.svg) \n",
+    "\n",
+    "<div class=\"figcaption\"><b>Figure 11</b>.\n",
+    "(a) $k$-d trees recursively divide a space into rectilinear regions.  Each leaf of the tree contains a set of points contained in that region.  (b) For a nearest-neighbor query (blue point), the leaf containing the point is reached first, and the closest point in the leaf is found (blue circle). This forms an upper bound on the nearest neighbor's distance, and any leaves further than this distance will be pruned.  (c) Only one more leaf is visited before the nearest neighbor is found.\n",
+    "</div>\n",
+    "\n",
+    "***************\n",
     "\n",
     "More formally, the binary tree $T_{kd}$ is composed of nodes $N$.  Each leaf node contains a list of contained points `pts`, and each non-leaf node contains a split dimension `dim` and split value `value`.  Non-leaf nodes have exactly two children $C^-$, and $C^+$, and all points $q \\in \\mathbb{R}^d$ such that $q_{dim} < value$ belong to the _negative_ child $C^-$, while points such that $q_{dim} \\geq value$ belong to the _positive_ child $C^+$.\n",
     "\n",
@@ -1304,6 +1348,8 @@
     "proportional to the magnitude of the force. In this way, consistent rate\n",
     "of progress is ensured as the path evolves.\n",
     "\n",
+    "TODO: Figure 13\n",
+    "\n",
     "This method works well when the robot simply needs to move slightly away\n",
     "from a straight line path to avoid obstacles, provided that obstacles\n",
     "are relatively convex and spatially distant. Its main advantages are 1)\n",
@@ -1334,6 +1380,8 @@
     "with $k$ segments corresponds to some value of $\\theta$. To make this\n",
     "dependence clear, we shall refer to the path defined by some value\n",
     "$\\theta$ as $y_\\theta$.\n",
+    "\n",
+    "TODO: Figure 14\n",
     "\n",
     "If the dimension of C-space is $d$, then $N = d(k-1)$. Hence the\n",
     "trajectory optimization problem can be quite high dimensional (hundreds\n",
