--- a/OptimalControl.ipynb
+++ b/OptimalControl.ipynb
@@ -68,7 +68,7 @@
     "trajectory exists, but rather only a sequence of trajectories\n",
     "approaching an optimal cost. Hence, if we prefer to be pedantic, it is\n",
     "often necessary to prove existence of an optimal solution first, or to\n",
-    "relax the problem to determine only an approximate optimal.)\n",
+    "relax the problem to determine only an approximate optimum.)\n",
     "\n",
     "### Cost functionals\n",
     "\n",
@@ -87,7 +87,7 @@
     "\n",
     "### Finite horizon optimal control and discounting\n",
     "\n",
-    "As stated the optimal control problem is somewhat ill-behaved because it\n",
+    "As stated, this problem is somewhat ill-behaved because it\n",
     "involves an infinite integral, which could achieve infinite cost even\n",
     "for relatively well-behaved trajectories. For example, if the cost were\n",
     "simply squared error, a trajectory that achieves 0.01 steady-state error\n",
@@ -2594,7 +2594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
