--- a/GraphSearch.ipynb
+++ b/GraphSearch.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "1. $d[v] \\gets \\infty$ for all $v\\in V$\n",
     "* $d[s] \\gets 0$\n",
-    "* $p[v] \\gets nil$ for all $v\\in V$ $Q \\gets V$\n",
+    "* $p[v] \\gets nil$ for all $v\\in V$\n",
     "* $Q \\gets \\{ s \\}$\n",
     "* **while** $Q$ is not empty **do**\n",
     "* &nbsp;&nbsp;&nbsp;$v \\gets \\text{vertex in } Q \\text{ that minimizes }d[v]$\n",
