--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -5097,14 +5097,16 @@
     "effect of creating a jagged \"stair step\" appearance because each face is\n",
     "axis-aligned.\n",
     "\n",
-    "*************\n",
+    "************\n",
+    "<a name=\"fig:marching_cube\"></a>\n",
+    "    \n",
+    "![fig:marching_cube](figures/modeling/Yixuan_chap7_fig13.png)\n",
     "\n",
-    "TODO: illustration of marching cubes\n",
-    "<div class=\"figcaption\"><a name=\"fig:MarchingCubes\">Figure 13</a>. \n",
-    "    TODO\n",
-    "    </div>\n",
+    "<div class=\"figcaption\"><b>Figure 13</b>. An example cell for marching cubes algorithm. Values of vertices represent the distance field value. The orange triangle is the 0 isosurface.\n",
     "\n",
-    "*************"
+    "</div>\n",
+    "\n",
+    "************"
    ]
   },
   {
@@ -5490,7 +5492,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5504,7 +5506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -6331,5 +6333,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
