--- a/PlanningWithDynamicsAndUncertainty.ipynb
+++ b/PlanningWithDynamicsAndUncertainty.ipynb
@@ -220,7 +220,17 @@
     "\n",
     "***********************\n",
     "\n",
-    "TODO: illustration (Figure 4)\n",
+    "****************\n",
+    "\n",
+    "<a name=\"fig:kinoRRT\"></a>\n",
+    "\n",
+    "![fig:kinoRRT](figures/planning/Yixuan_chap11_fig4.gif)\n",
+    "\n",
+    "<div class=\"figcaption\"><b>Figure 4</b>.\n",
+    "    One example of KinodynamicRRT and RRT algorithm comparison. Blue dots are nodes of the tree, and orange dots are random sampled node. Green dots are nearest neighbors found. Light blue dots and red blue dots in 'choose control and simulate' step are simulated nodes and chosen node respectively.\n",
+    "    </div>\n",
+    "\n",
+    "****************\n",
     "\n",
     "Again, the RRT Voronoi bias we described in the earlier RRT-Connect discussion is applied here.  Lines 3-5 select a node of the tree $x_{near}$ and an expansion control $u_e$ to help extend the tree in the direction of $x_{rand}$.  If the path is collision free, it is added to the tree.  Lines 9-10 test whether the state $x_e$ resulting from an extension lies within a *goal region* $G$.  If so, then the path leading to $x_e$ is returned.  If a path is returned, it is guaranteed to be kinematically and dynamically feasible.\n",
     "\n",
@@ -22368,7 +22378,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -22382,7 +22392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": false,
@@ -22424,5 +22434,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
