--- a/MotionPlanningHigherDimensions.ipynb
+++ b/MotionPlanningHigherDimensions.ipynb
@@ -1348,8 +1348,17 @@
     "proportional to the magnitude of the force. In this way, consistent rate\n",
     "of progress is ensured as the path evolves.\n",
     "\n",
-    "TODO: Figure 13\n",
+    "***************\n",
     "\n",
+    "<a name=\"fig:potential\"></a>\n",
+    "\n",
+    "![fig:potential](figures/planning/Yixuan_chap10_fig13_2.png) \n",
+    "\n",
+    "<div class=\"figcaption\"><b>Figure 13</b>.\n",
+    "An example of potential field. The yellow circle is the obstacle. The contour shows the potential field with euqal value.\n",
+    "</div>\n",
+    "\n",
+    "***************\n",
     "This method works well when the robot simply needs to move slightly away\n",
     "from a straight line path to avoid obstacles, provided that obstacles\n",
     "are relatively convex and spatially distant. Its main advantages are 1)\n",
@@ -1620,7 +1629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.11"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
