update chap7 fig14 gif for better quality

--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -5151,11 +5151,12 @@
     "\n",
     "\n",
     "*************\n",
+    "<a name=\"fig:fmm\"></a>\n",
+    "![fig:fmm](figures/modeling/Yixuan_chap7_fig14.gif)\n",
     "\n",
-    "TODO: illustration of fast marching method\n",
-    "<div class=\"figcaption\"><a name=\"fig:FMM\">Figure 14</a>. \n",
-    "    TODO\n",
-    "    </div>\n",
+    "<div class=\"figcaption\"><b>Figure 13</b>. An example cell for marching cubes algorithm. Values of vertices represent the distance field value. The orange triangle is the 0 isosurface.\n",
+    "\n",
+    "</div>\n",
     "\n",
     "*************\n",
     "\n",
@@ -5506,7 +5507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.11"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
