finish chap7 fig14

--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -5154,7 +5154,7 @@
     "<a name=\"fig:fmm\"></a>\n",
     "![fig:fmm](figures/modeling/Yixuan_chap7_fig14.gif)\n",
     "\n",
-    "<div class=\"figcaption\"><b>Figure 13</b>. An example cell for marching cubes algorithm. Values of vertices represent the distance field value. The orange triangle is the 0 isosurface.\n",
+    "<div class=\"figcaption\"><b>Figure 14</b>. An example for one iteration of fast marching method. Values of nodes represent the distance field value.\n",
     "\n",
     "</div>\n",
     "\n",
