crop chap7_fig13, chap10_fig13, chap11_fig4; change chap_7_fig14 gif to two images

--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -5097,16 +5097,14 @@
     "effect of creating a jagged \"stair step\" appearance because each face is\n",
     "axis-aligned.\n",
     "\n",
-    "************\n",
+    "*************\n",
     "<a name=\"fig:marching_cube\"></a>\n",
-    "    \n",
-    "![fig:marching_cube](figures/modeling/Yixuan_chap7_fig13.png)\n",
+    "![fig:marching_cube](figures/modeling/Yixuan_chap7_fig13_resize.png)\n",
     "\n",
     "<div class=\"figcaption\"><b>Figure 13</b>. An example cell for marching cubes algorithm. Values of vertices represent the distance field value. The orange triangle is the 0 isosurface.\n",
+    "    </div>\n",
     "\n",
-    "</div>\n",
-    "\n",
-    "************"
+    "*************"
    ]
   },
   {
@@ -5149,14 +5147,20 @@
     "modified only if the extrapolated value is less than the previously\n",
     "stored values. This continues until all vertices are accepted.\n",
     "\n",
-    "\n",
     "*************\n",
     "<a name=\"fig:fmm\"></a>\n",
-    "![fig:fmm](figures/modeling/Yixuan_chap7_fig14.gif)\n",
     "\n",
-    "<div class=\"figcaption\"><b>Figure 13</b>. An example cell for marching cubes algorithm. Values of vertices represent the distance field value. The orange triangle is the 0 isosurface.\n",
+    "| (a) Fast marching method demonstration within one iteration |\n",
+    "|--------------------------------------------------------|\n",
+    "|![fig:fmm](figures/modeling/Yixuan_chap7_fig14_1.png) |\n",
     "\n",
-    "</div>\n",
+    "| (b) Fast marching method demonstration across multiple iterations |\n",
+    "|--------------------------------------------------------|\n",
+    "| ![fig:fmm2](figures/modeling/Yixuan_chap7_fig14_2.png) |\n",
+    "\n",
+    "<div class=\"figcaption\"><b>Figure 14</b>. \n",
+    "    Two demonstrations of fast marching method. In Fig. 14(a), steps within the first iteration are shown. In node selection step, the grid vertex with the least distance is selected. Therefore, the node with signed distance -0.1 is selected here. Then unaccepted neighbor distance is extrapolated from accepted distance value and updated. In Fig. 14(b), several iterations are shown. The first two iterations show the order of node selections. From (i-1)th iteration to (i+1) iteration, the considered node with least distance value is marked as accepted.\n",
+    "    </div>\n",
     "\n",
     "*************\n",
     "\n",
@@ -5507,7 +5511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
