--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -4600,7 +4600,7 @@
     "Suppose $\\mathbf{n} \\cdot \\mathbf{x}$ over all $\\mathbf{x} \\in A$ spans the range\n",
     "$[a,b]$, and $\\mathbf{n} \\cdot \\mathbf{x}$ over all $\\mathbf{x} \\in B$ spans the range\n",
     "$[c,d]$. If the projected intervals $[a,b]$ and $[c,d]$ do not\n",
-    "intersect, then we can definitively say that $A$ and $B$ do intersect.\n",
+    "intersect, then we can definitively say that $A$ and $B$ do not intersect.\n",
     "\n",
     "It is straightforward to determine these intervals for a convex polygon\n",
     "with vertices $\\mathbf{v}_1,\\ldots,\\mathbf{v}_n$.  The projected distances along\n",
