--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -756,7 +756,7 @@
     "singularity and there are an infinite number of solutions for $q_4$ and\n",
     "$q_6$ that satisfy $q_4 + q_6 = atan2(r_{21},r_{11})$. Otherwise, we can\n",
     "calculate the two possible values $s_5 = \\sin q_5$ and determine\n",
-    "$q_4 = atan2(-r_{31},r_{32})$ and $q_6 = atan2(r_{23},r_{13})$.\n",
+    "$q_4 = atan2(r_{23},r_{13})$ and $q_6 = atan2(r_{32},-r_{31})$.\n",
     "\n",
     "Once these values are determined, it remains to be seen where to place\n",
     "the *wrist* so that the tool is at $(x_D,y_D,z_D)$. We know that\n",
