Fixed broken links

--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -283,7 +283,7 @@
     "\n",
     "****************\n",
     "\n",
-    "<a href=\"fig:2RWorkspace\"></a>\n",
+    "<a name=\"fig:2RWorkspace\"></a>\n",
     "![fig:2RWorkspace](figures/modeling/2R_workspace.svg)\n",
     "\n",
     "<div class=\"figcaption\"><b>Figure 1</b>. A 2R manipulator, with joint limits of $\\pm 45^\\circ$ for the first joint and $\\pm 90^\\circ$ for the second, and a second link somewhat shorter than the first. Treating the position of the end effector as the workspace coordinate, the reachable workspace is a portion of an annulus (planar donut shape).</div>\n",
@@ -740,7 +740,7 @@
    "source": [
     "#### 6R manipulator\n",
     "\n",
-    "Now consider a more typical 6R industrial robot arm, configured with the reference coordinate system as shown in <a href=\"fig:6RManipulator\">Figure 4</a>. (Ignore the gripper degree of freedom.)  The shoulder axes and wrist axes intersect at a common point, indicated by the marked coordinate frames.\n",
+    "Now consider a more typical 6R industrial robot arm, configured with the reference coordinate system as shown in <a href=\"#fig:6RManipulator\">Figure 4</a>. (Ignore the gripper degree of freedom.)  The shoulder axes and wrist axes intersect at a common point, indicated by the marked coordinate frames.\n",
     "\n",
     "******************\n",
     "\n",
